(fix) albertliana: venue not showing time on small device

--- a/albertliana/src/css/main.css
+++ b/albertliana/src/css/main.css
@@ -102,6 +102,14 @@ h2 {
 
 }
 
+@media (max-width: 320px) {
+
+  .venue .accordion-content {
+    height: 570px;
+  }
+
+}
+
 
 .gallery .accordion-content {
   overflow: auto;
